# close_ryestaurants

./: .flaskenv  README.md  pyproject.toml
src/close_ryestaurants/: __init__.py  extras.py
src/close_ryestaurants/templates/: index.html  result.html
